# Git

./: AGENTS.md  CLAUDE.md  README.md
HELYXcore-4.4.0/: AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README  README.md  VTK
HELYXcore-4.4.0/applications/: CMakeLists.txt
HELYXcore-4.4.0/applications/doc/: DNSSolversDoc.H  basicSolversDoc.H  combustionSolversDoc.H  discreteMethodsSolversDoc.H  electromagneticsSolversDoc.H  heatTransferSolversDoc.H  incompressibleSolversDoc.H  lagrangianSolversDoc.H  meshUtilitiesDoc.H  multiphaseSolversDoc.H  solversDoc.H  stressAnalysisSolversDoc.H  utilities.dox  utilitiesDoc.H
HELYXcore-4.4.0/applications/solvers/: CMakeLists.txt
HELYXcore-4.4.0/applications/test/: CMakeLists.txt
HELYXcore-4.4.0/applications/utilities/: CMakeLists.txt
HELYXcore-4.4.0/doc/: codingStyleGuide.org
HELYXcore-4.4.0/doc/Doxygen/: Doxyfile  README.html  genDoxygen
HELYXcore-4.4.0/etc/: README.org  bashrc  cellModels  controlDict  cshrc  userSettings.cmake
HELYXcore-4.4.0/etc/caseDicts/: meshQualityDict  setConstraintTypes
HELYXcore-4.4.0/etc/cmake/: advancedSettings.cmake  buildConfiguration.cmake  check_helyx_project_dir.cmake  cmakeConfiguration.cmake  dllExportExclusions.map  functions.cmake  packingConfiguration.cmake  packingConfigurationBinaries.cmake  packingConfigurationCoreSource.cmake  packingConfigurationModuleSource.cmake  parseThirdPartySettings.cmake  projectFooter.cmake  projectHeader.cmake  setDeferredCMakeSettings.cmake  testCMakeVersion.cmake  testNinjaVersion.cmake  thirdPartyConfiguration.cmake  toolchain-mingw64.cmake  userSettingsConfiguration.cmake
HELYXcore-4.4.0/etc/cmakeSettingsFiles/: exampleCMakeGUISettings.cmake  exampleClangSettings.cmake  exampleLinuxSettings.cmake  exampleVSCodeSettings.cmake  exampleWindowsSettings.cmake
HELYXcore-4.4.0/etc/codeTemplates/: foamScript
HELYXcore-4.4.0/etc/config.csh/: complete-wrapper  csh_completion
HELYXcore-4.4.0/etc/config.sh/: bash_completion
HELYXcore-4.4.0/etc/coverageLists/: boundaryConditions_helyxGUI  boundaryConditions_helyxTest  buoyancyModel_helyxGUI  buoyancyModel_helyxTest  motion_helyxGUI  motion_helyxTest  statesWithModules_helyxGUI  statesWithModules_helyxTest  states_helyxGUI  states_helyxTest  turbulenceModels_helyxGUI  turbulenceModels_helyxTest
HELYXcore-4.4.0/etc/dictData/: helyxMesh.castellated  helyxMesh.layers  helyxMesh.misc  helyxMesh.qualityDict  helyxMesh.snap  snappyMesh.castellated  snappyMesh.layers  snappyMesh.misc  snappyMesh.qualityDict  snappyMesh.snap
HELYXcore-4.4.0/etc/exampleDictionaries/: blockMeshDict.parallelBlockMesh  changeDictionaryDict  createBafflesDict  createJumpDict  decomposeParDict  extrude2DMeshDict  extrudeMeshDict  functions.adjustableTimeStep  functions.cloudInfo  functions.courant  functions.ensightWrite  functions.fieldAverage  functions.fieldBlendingFactor  functions.fieldCoordinateSystemTransform  functions.fieldMinMax  functions.fieldProcess  functions.fieldValues  functions.fieldWrite  functions.fluidHeight  functions.forceCoeffs  functions.forces  functions.io  functions.liftDrag  functions.nearWallFields  functions.patchWrite  functions.printDictionary  functions.processorField  functions.readFields  functions.streamLine  functions.subVolume  functions.surfaceReport  functions.surfaces  functions.systemCall  functions.thermalComfort  functions.timeActivatedFileUpdate  functions.turboPerformance  functions.turbulenceFields  functions.volumeReport  functions.wallBoundedStreamLine  functions.waveGauge  (+17 more)
HELYXcore-4.4.0/etc/thermoData/: IAPWS-IF97EOS  liquidProperties
HELYXcore-4.4.0/etc/turbulenceData/: kOmegaSST.data
HELYXcore-4.4.0/examples/: .gitignore  Allclean  Allrun  Alltest
HELYXcore-4.4.0/modules/: CMakeLists.txt
HELYXcore-4.4.0/modules/runTimePostProcessing/: .gitignore  CMakeGenAvailableColourmaps.cmake  CMakeLists.txt  README.md  compileOptions.H  rtppFunctionObject.C  rtppFunctionObject.H
HELYXcore-4.4.0/modules/swak4Foam/: CMakeLists.txt  Doxyfile  README  README.md
HELYXcore-4.4.0/modules/waves2Foam/: .gitignore  CMakeLists.txt
HELYXcore-4.4.0/src/: CMakeLists.txt
HELYXcore-4.4.0/src/ODE/: CMakeLists.txt
HELYXcore-4.4.0/src/OSspecific/: CMakeLists.txt
HELYXcore-4.4.0/src/OpenFOAM/: CMakeLists.txt
HELYXcore-4.4.0/src/TurbulenceModels/: CMakeLists.txt
HELYXcore-4.4.0/src/combustionModels/: CMakeLists.txt
HELYXcore-4.4.0/src/conversion/: CMakeLists.txt
HELYXcore-4.4.0/src/deformingBodyMotionFunctions/: CMakeLists.txt
HELYXcore-4.4.0/src/doc/: DESModelDoc.H  LESModelDoc.H  ODEDoc.H  RASBoundaryConditionsDoc.H  RASModelDoc.H  basicThermoDoc.H  boundaryConditions.dox  combustionModelsDoc.H  fieldFunctionObjectsDoc.H  finiteVolumeSchemes.dox  finiteVolumeSchemesDoc.H  forcesFunctionObjectsDoc.H  functionObjectsDoc.H  fvOptionsDoc.H  fvPatchFieldDoc.H  helyxSrc.dox  helyxSrcDoc.H  lagrangianFunctionObjectsDoc.H  lagrangianIntermediate.dox  lagrangianIntermediateDoc.H  laminarModelDoc.H  lduMatrix.dox  lduMatrixDoc.H  motionSolversDoc.H  radiationModelsDoc.H  regionBoundaryConditionsDoc.H  rigidBodyDynamicsDoc.H  sixDofRigidBodyMotionDoc.H  specieDoc.H  surfaceFilmBoundaryConditionsDoc.H  thermalBaffleBoundaryConditionsDoc.H  thermophysicalBoundaryConditionsDoc.H  thermophysicalModels.dox  thermophysicalModelsDoc.H  turbulenceBoundaryConditionsCompDoc.H  turbulenceBoundaryConditionsDoc.H  turbulenceBoundaryConditionsIncompDoc.H  turbulenceModel.dox  turbulenceModelCompDoc.H  turbulenceModelIncompDoc.H  (+1 more)
HELYXcore-4.4.0/src/dynamicFvMesh/: CMakeLists.txt
HELYXcore-4.4.0/src/dynamicMesh/: CMakeLists.txt
HELYXcore-4.4.0/src/engine/: CMakeLists.txt
HELYXcore-4.4.0/src/fileFormats/: CMakeLists.txt
HELYXcore-4.4.0/src/finiteArea/: CMakeLists.txt
HELYXcore-4.4.0/src/finiteVolume/: CMakeLists.txt
HELYXcore-4.4.0/src/functionObjects/: CMakeLists.txt
HELYXcore-4.4.0/src/fvAgglomerationMethods/: CMakeLists.txt
HELYXcore-4.4.0/src/fvMeshDistributors/: CMakeLists.txt
HELYXcore-4.4.0/src/fvMeshGIBChangers/: CMakeLists.txt
HELYXcore-4.4.0/src/fvMeshMovers/: CMakeLists.txt
(+18554 files in other folders)
