#[[---------------------------------------------------------------------------]
|       o        |
|    o     o     |  HELYX (R) : Open-source CFD for Enterprise
|   o   O   o    |  Version : 4.4.0
|    o     o     |  ENGYS Ltd. <http://engys.com/>
|       o        |
[-----------------------------------------------------------------------------]
License
    This file is part of HELYXcore.
    HELYXcore is based on OpenFOAM (R) <http://www.openfoam.org/>.

    HELYXcore is free software: you can redistribute it and/or modify it
    under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    HELYXcore is distributed in the hope that it will be useful, but WITHOUT
    ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
    FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
    for more details.

    You should have received a copy of the GNU General Public License
    along with HELYXcore.  If not, see <http://www.gnu.org/licenses/>.

Copyright
    (c) 2019-2024 Engys Ltd.

[----------------------------------------------------------------------------]]

add_subdirectory(BinSum)

add_subdirectory(Circulator)

add_subdirectory(CompactIOList)

add_subdirectory(CompactListList)

add_subdirectory(DLList)

add_subdirectory(Dictionary)

add_subdirectory(Distribution)

add_subdirectory(DynamicField)

add_subdirectory(DynamicList)

add_subdirectory(Field)

add_subdirectory(FixedList)

add_subdirectory(Function1)

add_subdirectory(GAMGAgglomeration)

add_subdirectory(HashPtrTable)

add_subdirectory(HashSet)

add_subdirectory(HashTable)

add_subdirectory(HashTable2)

add_subdirectory(HashTable3)

add_subdirectory(Hashing)

add_subdirectory(HashingSpeed)

add_subdirectory(IOobjectList)

add_subdirectory(ISLList)

add_subdirectory(IStringStream)

add_subdirectory(IndirectList)

add_subdirectory(List)

add_subdirectory(ListOps)

add_subdirectory(Map)

add_subdirectory(Matrix)

add_subdirectory(NamedEnum)

add_subdirectory(ODE)

add_subdirectory(OStringStream)

add_subdirectory(POSIX)

add_subdirectory(PackedList)

add_subdirectory(PackedList1)

add_subdirectory(PackedList2)

add_subdirectory(PackedList3)

add_subdirectory(PackedList4)

add_subdirectory(PatchEdgeFaceWave)

add_subdirectory(PatchTools)

add_subdirectory(PointEdgeWave)

add_subdirectory(Polynomial)

add_subdirectory(PtrList)

add_subdirectory(PtrListDictionary)

add_subdirectory(SLList)

add_subdirectory(StaticHashTable)

add_subdirectory(Tuple2)

add_subdirectory(UDictionary)

add_subdirectory(UIndirectList)

add_subdirectory(UniformField)

add_subdirectory(alloc)

add_subdirectory(base64)

add_subdirectory(boundBox)

add_subdirectory(callback)

add_subdirectory(checkDecomposePar)

add_subdirectory(codeStream)

add_subdirectory(cplusplus1)

add_subdirectory(cpuInfo)

add_subdirectory(cstring)

add_subdirectory(cubicEqn)

add_subdirectory(cyclic)

add_subdirectory(delete)

add_subdirectory(dictionary)

add_subdirectory(dimensionedType)

add_subdirectory(dynamicIndexedOctree)

add_subdirectory(edges)

add_subdirectory(ensightFile)

add_subdirectory(ensightFoamReader)

add_subdirectory(error)

add_subdirectory(etcFiles)

add_subdirectory(extendedStencil)

add_subdirectory(faces)

add_subdirectory(fieldDependency)

add_subdirectory(fieldMapping)

add_subdirectory(fileName)

add_subdirectory(fileNameClean)

add_subdirectory(findCell-octree)

add_subdirectory(findSphereFeatureEdges-octree)

add_subdirectory(findTimes)

add_subdirectory(foamVersion)

add_subdirectory(fvMeshStitcher)

add_subdirectory(fvSolutionCombine)

add_subdirectory(fvc)

add_subdirectory(fvc2D)

add_subdirectory(globalIndex)

add_subdirectory(globalMeshData)

add_subdirectory(graph)

add_subdirectory(graphXi)

add_subdirectory(hexRef8)

add_subdirectory(io)

add_subdirectory(labelRanges)

add_subdirectory(liquid)

add_subdirectory(polyDistributionMap)

add_subdirectory(mappedPatch)

add_subdirectory(maxMem)

add_subdirectory(memInfo)

add_subdirectory(mesh)

add_subdirectory(mkdir)

add_subdirectory(momentOfInertia)

add_subdirectory(mvBak)

add_subdirectory(nullObject)

add_subdirectory(objectRegistry)

add_subdirectory(pTraits)

add_subdirectory(parallel)

add_subdirectory(parallel-communicators)

add_subdirectory(parallel-nonBlocking)

add_subdirectory(parallelOverset)

add_subdirectory(passiveParticle)

add_subdirectory(patchRegion)

add_subdirectory(patchToPatch)

add_subdirectory(pointField)

add_subdirectory(polygonTriangulate)

add_subdirectory(predicates)

add_subdirectory(prefixOSstream)

add_subdirectory(primitivePatch)

add_subdirectory(quaternion)

add_subdirectory(reconstruct)

add_subdirectory(regex)

add_subdirectory(rigidBodyDynamics)

add_subdirectory(router)

add_subdirectory(sha1)

add_subdirectory(simpleMatrix)

add_subdirectory(sizeof)

add_subdirectory(slicedField)

add_subdirectory(sort)

add_subdirectory(speed)

add_subdirectory(sphericalTensorField)

add_subdirectory(spline)

add_subdirectory(string)

add_subdirectory(stringList)

add_subdirectory(surfaceIntersection)

add_subdirectory(symmTensorField)

add_subdirectory(syncTools)

add_subdirectory(sysInfo)

add_subdirectory(tensor)

add_subdirectory(tensor2D)

add_subdirectory(tetTetOverlap)

add_subdirectory(thermoMixture)

add_subdirectory(tmpField)

add_subdirectory(tokenize)

add_subdirectory(triTet)

add_subdirectory(unitConversion)

add_subdirectory(vector)

add_subdirectory(vectorTools)

add_subdirectory(volField)

add_subdirectory(volPointInterpolation)

add_subdirectory(wallDist)

add_subdirectory(wallDistDyM)

add_subdirectory(wordRe)


